--- a/MyFirstGUIProject/pom.xml
+++ b/MyFirstGUIProject/pom.xml
@@ -5,11 +5,18 @@
   <version>0.0.1-SNAPSHOT</version>
 	<dependencies>
     	<dependency>
-    <groupId>org.eclipse.swt</groupId>
-    <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
-    <version>4.3</version>
-    <scope>provided</scope>
-</dependency>
+    	
+		    <groupId>org.eclipse.swt</groupId>
+		    <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
+		    <version>4.3</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>net.sf.ucanaccess</groupId>
+			<artifactId>ucanaccess</artifactId>
+			<version>4.0.4</version>
+		</dependency>
 
 	</dependencies>
   
